--- a/index.html
+++ b/index.html
@@ -1,36 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | 3-column preview card component</title>
+  <head>
+    <meta charset="UTF-8">
+    <!-- Displays site properly based on user's device -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <title>Frontend Mentor | 3-column preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  
-  Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-  or on your next road trip.
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca:wght@300;400;500&display=swap"
+      rel="stylesheet">
 
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-  and off-road adventures.
+    <!-- CSS Styles -->
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/styles.css">
+  </head>
 
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+  <body>
+
+    <main>
+
+      <div class="cards-container">
+
+        <div class="card" data-accent="bright-orange">
+          <div class="card-content">
+            <img src="images/icon-sedans.svg" alt="sedans-icon">
+            <h1 class="card-header">Sedans</h1>
+            <p class="card-description">
+              Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
+              or on your next road trip.
+            </p>
+          </div>
+
+          <a class="btn btn-outline" href="">Learn More</a>
+        </div>
+
+        <div class="card" data-accent="dark-cyan">
+          <div class="card-content">
+            <img src="images/icon-suvs.svg" alt="suvs-icon">
+            <h1 class="card-header">SUVs</h1>
+            <p class="card-description">
+              Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
+              and off-road adventures.
+            </p>
+          </div>
+
+          <a class="btn btn-outline" href="">Learn More</a>
+        </div>
+
+        <div class="card" data-accent="very-dark-cyan">
+          <div class="card-content">
+            <img src="images/icon-luxury.svg" alt="luxury-icon">
+            <h1 class="card-header">Luxury</h1>
+            <p class="card-description">
+              Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
+              rental and arrive in style.
+            </p>
+
+          </div>
+
+          <a class="btn btn-outline" href="">Learn More</a>
+        </div>
+
+      </div>
+
+    </main>
+
+    <footer>
+
+      <div class="cards-container">
+
+        <div class="card card-attribution" data-accent="gray">
+
+          <div class="card-content">
+
+            <a class="attribution" href="https://www.frontendmentor.io?ref=challenge" target="_blank">
+              <img src="images/frontendmentor-logo.png" alt="frontendmentor-logo">
+            </a>
+
+            <p class="card-description">
+              Challenge by <br>
+              <a class="attribution" href="https://www.frontendmentor.io?ref=challenge" target="_blank">
+                Frontent Mentor
+              </a>
+            </p>
+
+          </div>
+
+        </div>
+
+        <div class="card card-attribution" data-accent="gray">
+
+          <div class="card-content">
+
+            <a class="attribution" href="https://avatars.githubusercontent.com/u/77718874?v=4" target="_blank">
+              <img src="images/coder-avatar.png" alt="coder-avatar">
+            </a>
+            <p class="card-description">
+              Coded by <br>
+              <a class="attribution" href="https://www.frontendmentor.io/profile/zerescas">zerescas</a>
+            </p>
+
+          </div>
+
+        </div>
+
+      </div>
+
+
+    </footer>
+
+  </body>
+
 </html>
