--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
               Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
               rental and arrive in style.
             </p>
-
           </div>
 
           <a class="btn btn-outline" href="">Learn More</a>
@@ -77,8 +76,7 @@
         <div class="card card-attribution" data-accent="gray">
 
           <div class="card-content">
-
-            <a class="attribution" href="https://www.frontendmentor.io?ref=challenge" target="_blank">
+            <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">
               <img src="images/frontendmentor-logo.png" alt="frontendmentor-logo">
             </a>
 
@@ -88,7 +86,6 @@
                 Frontent Mentor
               </a>
             </p>
-
           </div>
 
         </div>
@@ -96,21 +93,19 @@
         <div class="card card-attribution" data-accent="gray">
 
           <div class="card-content">
-
-            <a class="attribution" href="https://avatars.githubusercontent.com/u/77718874?v=4" target="_blank">
+            <a href="https://avatars.githubusercontent.com/u/77718874?v=4" target="_blank">
               <img src="images/coder-avatar.png" alt="coder-avatar">
             </a>
+
             <p class="card-description">
               Coded by <br>
               <a class="attribution" href="https://www.frontendmentor.io/profile/zerescas">zerescas</a>
             </p>
-
           </div>
 
         </div>
 
       </div>
-
 
     </footer>
 
