Fix link to the coder profile

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="card card-attribution" data-accent="gray">
 
           <div class="card-content">
-            <a href="https://avatars.githubusercontent.com/u/77718874?v=4" target="_blank">
+            <a href="https://www.frontendmentor.io/profile/zerescas" target="_blank">
               <img src="images/coder-avatar.png" alt="coder-avatar">
             </a>
 
